frontend/src/common/livedrop/LiveDrop.module.scss
.livedrop__wrapper {
  height: 200px;
  width: 100%;

  display: flex;
  flex-direction: row;

  margin: 28px 0 0 40px;
}

.livedrop__buttons {
  display: flex;
  flex-direction: column;

  gap: 22px;

  margin-right: 32px;
}

.livedrop {
  display: flex;
  flex-direction: row;
  align-items: center;

  height: 200px;
  width: 100%;

  // overflow-x: scroll;
}

